--- a/parser-generator/.gitignore
+++ b/parser-generator/.gitignore
@@ -1,4 +1,5 @@
 ### Maven template
+.idea/
 target/
 pom.xml.tag
 pom.xml.releaseBackup
@@ -39,3 +40,11 @@ parser-generator.iml
 ### ANTLR specific
 *.tokens
 *.interp
+gen/antlr/GrammarGeneratorBaseListener.java
+gen/antlr/GrammarGeneratorBaseVisitor.java
+gen/antlr/GrammarGeneratorLexer.java
+gen/antlr/GrammarGeneratorListener.java
+gen/antlr/GrammarGeneratorParser.java
+gen/antlr/GrammarGeneratorVisitor.java
+src/main/main.iml
+src/test/test.iml
