--- a/parser-generator/pom.xml
+++ b/parser-generator/pom.xml
@@ -24,6 +24,19 @@
             <artifactId>antlr4-maven-plugin</artifactId>
             <version>${antlr4.plugin.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.3.0-RC1</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
